<resources>
    <string name="app_name">notLame</string>
    <string name="mypage_todo_edittext_hint">할일 추가하기</string>
    <string name="mypage_todo_textview_title">할일 목록</string>
    <string name="button_done">확인</string>
    <string name="butotn_input">입력</string>
    <string name="mypage_overlap_todo">이미 등록된 할일이 목록에 존재합니다.</string>
    <string name="mypage_edittext_null">할일을 추가하시려면 텍스트를 입력해주세요!</string>

    <string name="intent_userImage">userImage</string>
    <string name="intent_userNameText">userNameText</string>
    <string name="intent_userPositionText">userPositionText</string>

    <string name="_5_10">5~10자의 영어(대소문자)와 숫자만 입력하세요.</string>
    <string name="_8_15">8~15자의 영어(대소문자), 숫자, 특수문자를 포함하세요.</string>
    <string name="_10_11">10~11자의 숫자만 입력하세요.</string>
    <string name="kor">한글 또는 영어만 입력하세요.</string>
    <string name="info">입력되지 않은 정보가 있습니다</string>
    <string name="signup_kor">한글 또는 영어만 입력하세요.</string>
    <string name="signup__5_10">5~10자의 영어(대소문자)와 숫자만 입력하세요.</string>
    <string name="signup__8_15">8~15자의 영어(대소문자), 숫자, 특수문자를 포함하세요.</string>
    <string name="signup__10_11">10~11자의 숫자만 입력하세요.</string>
    <string name="signup_cancel1">취소 되었습니다.</string>

    //detail
    <string name="warningBack">작성 중인 내용이 삭제될 수도 있습니다.</string>
    <string name="warningNull">입력된 값이 없습니다.</string>
    <string name="noticeComment">댓글을 입력하세요.</string>
    <string name="comment">댓글</string>

    //singIn
    <string name="noticeTeam">뻔하지 않조에서 여러분의 꿈을 이뤄주세요!</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="logIn">LOG IN</string>
    <string name="logUp">LOG UP</string>
    <string name="checkIDPassword">아이디/비밀번호를 확인해주세요</string>
    <string name="successLogin">로그인 성공</string>

    //writePage
    <string name="subject">제목</string>
    <string name="inputContents">내용을 입력해주세요</string>
    <string name="cancel">취소</string>
    
    //main
    <string name="name">이름</string>
    <string name="nameColon">이름 : </string>
    <string name="position">직책</string>
    <string name="positionColon">직책 : </string>
    <string name="teamMember">팀 멤버</string>
    <string name="teamNoticeBoard">팀 게시판</string>

    //singUp
    <string name="notice2Team">우리와 함께하는 당신은\n이미 뻔하지 않조!</string>
    <string name="inputID">아이디를 입력하세요.</string>
    <string name="inputPassword">비밀번호를 입력하세요.</string>
    <string name="inputPosition">직책을 입력하세요.</string>
    <string name="phoneNumber">전화번호</string>
    <string name="inputPhoneNumber">전화번호를 입력하세요.</string>

</resources>